--- a/1707C4组/钟晓鹏/钟晓鹏.md
+++ b/1707C4组/钟晓鹏/钟晓鹏.md
@@ -42,7 +42,7 @@ console.log(abc)
 
   ```javascript
   //提取Math对象中的log, sin, cos属性
-  
+  const {log,sin,cos}=Math
   ```
 
 - **数组解构**
@@ -72,6 +72,11 @@ console.log(abc)
 
 ```javascript
 //用Object.assign()扩展数组
+
+var arr = [1, 2, 3, [4, 5], {a: 6, b: 7}]
+var arr3 = [...arr]
+var arr4 = Object.assign([],arr)
+
 ### **数组扩展**
 
  function add(...values){
